2004-08-05  Gerard Klaver <gerard at gkall dot hobby dot nl>

	* backend/teco2.c backend/teco2.h: changed to SANE_VALUE_SCAN_MODE_LINEART, _GRAY, and _COLOR,
	* backend/teco2.c: changed use of %d to %ld (when bytes values are displayed)

2004-08-04  Julien Blache <jb at jblache dot org>
	* tools/hotplug/libsane.usermap: added HP ScanJet 5300C.

2004-08-04  Gerard Klaver <gerard at gkall dot hobby dot nl>

	* AUTHORS: corrrection for teco2
	* doc/descriptions/teco2.desc: url and status change
	* doc/sane-teco2.man: update info
	* backend/teco2.c: - added for the VM6575 a WHITE_LEVEL_R, _G an _B
	  slider opion
	  -changed for the VM656A and VM6575 and VM6586 the calibration part
	  (subtract highest and lowest value and then divide).
	  -default SANE_TECO_CAL_ALGO value is now 1 for the VM3564 and
	  VM6575.
	  - preview value is now 75 dpi for the VM6575

2004-08-04  Oliver Rauch <Oliver.Rauch@Rauch-DOmain.DE>
	* doc/umax/umax.FAQ: corrected bug about dtc3181e scsi controller

2004-08-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* aclocal.m4 configure include/sane/config.h.in: Regenerated to
	  include updates from niash and resource manager inclusion.
	* doc/sane.man doc/sane-niash.man: Minor documentation updates.
	* doc/descriptions-external/niash.desc: Removed (backend now included).

2004-08-03  Gerhard Jaeger <gerhard@gjaeger.de>

	* AUTHORS: Added niash backend maintainer and author.
	* configure.in: Added niash backend.
	* backend/dll.conf: Added niash backend.
	* backend/Makefile.in: Added niash backend files and target.
	* backend/niash.c backend/niash_core.c backend/niash_core.h
	  backend/niash-xfer.c backend/niash-xfer.h backend/niash-types.h: 
	  Niash backend files, initial checkin.
	* doc/sane-niash.man, doc/descriptions/niash.desc, doc/niash/niash.TODO: 
	  Initial checkin.
	* doc/Makefile.in: Added niash documentation stuff.
	* doc/sane-man: Added niash manpage.
	* po/Makefile.in: Added niash source file.