@@ -96,6 +96,10 @@ usb 0x055f 0x021a
 usb 0x055f 0x021d
 
 ##############################################################################
+# Autodetect Mustek ScanExpress 1248 UB
+usb 0x055f 0x021f
+
+##############################################################################
 # Autodetect Mustek Bearpaw 1200 CU Plus and Packard Bell Diamond 1200
 usb 0x055f 0x021c
 
@@ -104,6 +108,9 @@ usb 0x055f 0x021c
 # Packard Bell Diamond 1200:
 #vendor "Packard Bell"
 #model "Diamond 1200"
+
+# Another Mustek BearPaw 1200 CU Plus version?
+usb 0x055f 0x021b
 
 ##############################################################################
 # Autodetect Mustek ScanExpress A3 USB
