@@ -567,6 +567,57 @@ static GT68xx_Model mustek_scanexpress1200ubplus_model = {
     /* Setup and tested */
 };
 
+static GT68xx_Model mustek_scanexpress1248ub_model = {
+  "mustek-scanexpress-1248-ub",	/* Name */
+  "Mustek",			/* Device vendor string */
+  "ScanExpress 1248 UB",	/* Device model name */
+  "PS1Dfw.usb",			/* Name of the firmware file */
+  SANE_FALSE,			/* Dynamic allocation flag */
+
+  &mustek_gt6816_command_set,	/* Command set used by this scanner */
+
+  600,				/* maximum optical sensor resolution */
+  1200,				/* maximum motor resolution */
+  600,				/* base x-res used to calculate geometry */
+  600,				/* base y-res used to calculate geometry */
+  1200,				/* if ydpi is equal or higher, use linemode */
+  1200,   			/* if ydpi is equal or higher, disable backtracking */
+  SANE_FALSE,			/* Use base_ydpi for all resolutions */
+
+  {600, 300, 150, 75, 50, 0},	/* possible x-resolutions */
+  {1200, 600, 300, 150, 75, 50, 0},	/* possible y-resolutions */
+  {16, 12, 8, 0},		/* possible depths in gray mode */
+  {16, 12, 8, 0},		/* possible depths in color mode */
+
+  SANE_FIX (0.0),		/* Start of scan area in mm  (x) */
+  SANE_FIX (13.0),		/* Start of scan area in mm (y) */
+  SANE_FIX (217.0),		/* Size of scan area in mm (x) */
+  SANE_FIX (299.0),		/* Size of scan area in mm (y) */
+
+  SANE_FIX (9.0),		/* Start of white strip in mm (y) */
+  SANE_FIX (0.0),		/* Start of black mark in mm (x) */
+
+  SANE_FIX (0.0),		/* Start of scan area in TA mode in mm (x) */
+  SANE_FIX (0.0),		/* Start of scan area in TA mode in mm (y) */
+  SANE_FIX (100.0),		/* Size of scan area in TA mode in mm (x) */
+  SANE_FIX (100.0),		/* Size of scan area in TA mode in mm (y) */
+
+  SANE_FIX (0.0),		/* Start of white strip in TA mode in mm (y) */
+
+  0, 0, 0,			/* RGB CCD Line-distance correction in pixel */
+  0,				/* CCD distcance for CCD with 6 lines) */
+
+  COLOR_ORDER_BGR,		/* Order of the CCD/CIS colors */
+  {0x14, 0x07, 0x14, 0x07, 0x14, 0x07},	/* Default offset/gain */
+  {0x157, 0x157, 0x157},	/* Default exposure parameters */
+  SANE_FIX (2.0),		/* Default gamma value */
+
+  SANE_TRUE,			/* Is this a CIS scanner? */
+  GT68XX_FLAG_UNTESTED | GT68XX_FLAG_NO_STOP		/* Which flags are needed for this scanner? */
+    /* Completely untested, seems to use gt6816 CIS, details unknown */
+};
+
+
 static GT68xx_Model artec_ultima2000_model = {
   "artec-ultima-2000",		/* Name */
   "Artec",			/* Device vendor string */
@@ -1383,8 +1434,10 @@ static GT68xx_USB_Device_Entry gt68xx_usb_device_list[] = {
   {0x055f, 0x0218, &mustek_2400ta_model},
   {0x055f, 0x0219, &mustek_2400taplus_model},
   {0x055f, 0x021c, &mustek_1200cuplus_model},
+  {0x055f, 0x021b, &mustek_1200cuplus_model}, /* Different id? New */
   {0x055f, 0x021d, &mustek_2400cuplus_model},
   {0x055f, 0x021e, &mustek_1200ta_model},
+  {0x055f, 0x021f, &mustek_scanexpress1248ub_model},
   {0x05d8, 0x4002, &mustek_1200cu_model},
   {0x05d8, 0x4002, &mustek_scanexpress1200ubplus_model},	/* manual override */
   {0x05d8, 0x4002, &artec_ultima2000_model},	/* manual override */
