@@ -1,5 +1,5 @@
 :backend "gt68xx"
-:version "1.0-61"
+:version "1.0-62"
 :manpage "sane-gt68xx"
 :url "http://www.meier-geinitz.de/sane/gt68xx-backend/"
 :comment "Only the USB scanners mentioned below are supported. For other Mustek BearPaws, look at the Plustek and the MA-1509 backend."
@@ -148,6 +148,12 @@
 :model "BearPaw 1200 CU Plus"
 :interface "USB"
 :status :good
+:comment "Product id 0x021c"
+
+:model "BearPaw 1200 CU Plus"
+:interface "USB"
+:status :untested
+:comment "Procuct id 0x021b"
 
 :model "BearPaw 1200 TA"
 :interface "USB"
@@ -206,6 +212,11 @@
 :model "ScanExpress 1200 UB Plus"
 :interface "USB"
 :status :good
+
+:model "ScanExpress 1248 UB"
+:interface "USB"
+:status :untested
+:comment "Is detected now but is completely untested. Please contact me if you own such a device."
 
 :model "ScanExpress A3 USB"
 :interface "USB"
