@@ -293,6 +293,8 @@ libusbscanner             0x0003      0x055f   0x0218    0x0000       0x0000    
 libusbscanner             0x0003      0x055f   0x0219    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Mustek Systems Inc.|BearPaw 2448 TA Plus
 libusbscanner             0x0003      0x055f   0x021A    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
+# Mustek Systems Inc.|BearPaw 1200 CU Plus (another one?)
+libusbscanner             0x0003      0x055f   0x021b    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Mustek Systems Inc.|BearPaw 1200 CU Plus
 libusbscanner             0x0003      0x055f   0x021c    0x0000       0x0000       0x00         0x00            0x00            0x00            0x00               0x00               0x00000000
 # Mustek Systems Inc.|Bearpaw 2400 CU Plus
